deprecations/ingressroute-deprecations.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: deprecations.${dns_domain}
  namespace: deprecations
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`deprecations.${dns_domain}`)
      kind: Rule
      services:
        - name: deprecations
          kind: Service
          port: 8080
      middlewares:  
        - name: error-pages
          namespace: traefik
        - name: headers-add-cors-for-stremio
          namespace: traefik
